--- a/app/views/config.html
+++ b/app/views/config.html
@@ -61,6 +61,7 @@
     <div class="row">
       <div class="col-lg-2">
         <h4>Processo A</h4>
+        <small>w?</small>
         <div>
           <input id="rwA1" type="checkbox">
           <button class="btn input-sm" data-bind="click: addPage" value="A1" style="margin-bottom: 5px; background-color: #99FF99">&nbsp;&nbsp;&nbsp;1&nbsp;&nbsp;&nbsp;</button><br>
@@ -72,12 +73,13 @@
           <button class="btn input-sm" data-bind="click: addPage" value="A4" style="margin-bottom: 5px; background-color: #99FF99">&nbsp;&nbsp;&nbsp;4&nbsp;&nbsp;&nbsp;</button><br>
           <input id="rwA5" type="checkbox">
           <button class="btn input-sm" data-bind="click: addPage" value="A5" style="margin-bottom: 5px; background-color: #99FF99">&nbsp;&nbsp;&nbsp;5&nbsp;&nbsp;&nbsp;</button><br>
-          <input id="rwA6" type="checkbox">
-          <button class="btn input-sm" data-bind="click: addPage" value="A6" style="margin-bottom: 5px; background-color: #99FF99">&nbsp;&nbsp;&nbsp;6&nbsp;&nbsp;&nbsp;</button>
+          <!-- <input id="rwA6" type="checkbox">
+          <button class="btn input-sm" data-bind="click: addPage" value="A6" style="margin-bottom: 5px; background-color: #99FF99">&nbsp;&nbsp;&nbsp;6&nbsp;&nbsp;&nbsp;</button> -->
       </div>
     </div>
     <div class="col-lg-2">
       <h4>Processo B</h4>
+      <small>w?</small>
       <div>
         <input id="rwB1" type="checkbox">
         <button class="btn input-sm" data-bind="click: addPage" value="B1" style="margin-bottom: 5px; background-color: #85D6FF">&nbsp;&nbsp;&nbsp;1&nbsp;&nbsp;&nbsp;</button><br>
@@ -89,12 +91,13 @@
         <button class="btn input-sm" data-bind="click: addPage" value="B4" style="margin-bottom: 5px; background-color: #85D6FF">&nbsp;&nbsp;&nbsp;4&nbsp;&nbsp;&nbsp;</button><br>
         <input id="rwB5" type="checkbox">
         <button class="btn input-sm" data-bind="click: addPage" value="B5" style="margin-bottom: 5px; background-color: #85D6FF">&nbsp;&nbsp;&nbsp;5&nbsp;&nbsp;&nbsp;</button><br>
-        <input id="rwB6" type="checkbox">
-        <button class="btn input-sm" data-bind="click: addPage" value="B6" style="margin-bottom: 5px; background-color: #85D6FF">&nbsp;&nbsp;&nbsp;6&nbsp;&nbsp;&nbsp;</button>
+        <!-- <input id="rwB6" type="checkbox">
+        <button class="btn input-sm" data-bind="click: addPage" value="B6" style="margin-bottom: 5px; background-color: #85D6FF">&nbsp;&nbsp;&nbsp;6&nbsp;&nbsp;&nbsp;</button> -->
       </div>
     </div>
     <div class="col-lg-2">
       <h4>Processo C</h4>
+      <small>w?</small>
       <div>
         <input id="rwC1" type="checkbox">
         <button class="btn input-sm" data-bind="click: addPage" value="C1" style="margin-bottom: 5px; background-color: #FFFFCC">&nbsp;&nbsp;&nbsp;1&nbsp;&nbsp;&nbsp;</button><br>
@@ -106,8 +109,8 @@
         <button class="btn input-sm" data-bind="click: addPage" value="C4" style="margin-bottom: 5px; background-color: #FFFFCC">&nbsp;&nbsp;&nbsp;4&nbsp;&nbsp;&nbsp;</button><br>
         <input id="rwC5" type="checkbox">
         <button class="btn input-sm" data-bind="click: addPage" value="C5" style="margin-bottom: 5px; background-color: #FFFFCC">&nbsp;&nbsp;&nbsp;5&nbsp;&nbsp;&nbsp;</button><br>
-        <input id="rwC6" type="checkbox">
-        <button class="btn input-sm" data-bind="click: addPage" value="C6" style="margin-bottom: 5px; background-color: #FFFFCC">&nbsp;&nbsp;&nbsp;6&nbsp;&nbsp;&nbsp;</button>
+        <!-- <input id="rwC6" type="checkbox">
+        <button class="btn input-sm" data-bind="click: addPage" value="C6" style="margin-bottom: 5px; background-color: #FFFFCC">&nbsp;&nbsp;&nbsp;6&nbsp;&nbsp;&nbsp;</button> -->
       </div>
     </div>
   </div>
