usar knockout no stringref

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,7 +1,7 @@
 ﻿<div>
     <div class="row">
         <div class="col-lg-12">
-            <div class="text-center" id="refstring" style="font-size: 20px; font-weight: bold; display: block;">P0</div>
+            <div class="text-center" data-bind="html: callStack" id="refstring" style="font-size: 20px; font-weight: bold; display: block; min-height: 28px;"></div>
         </div>
     </div>
     <div class="row">
