melhoria no sinalizador

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -23,6 +23,8 @@
     </div>
     <br />
     <img id="noconf" style="display:none;" src="Content/images/noconf.png">
+    <img id="begin" style="display:none;" src="Content/images/begin.png">
     <img id="start" style="display:none;" src="Content/images/start.png">
     <img id="stop" style="display:none;" src="Content/images/stop.png">
+    <img id="end" style="display:none;" src="Content/images/end.png">
 </div>
