--- a/app/views/index.html
+++ b/app/views/index.html
@@ -23,8 +23,14 @@
     </div>
     <br />
     <img id="noconf" style="display:none;" src="Content/images/noconf.png">
-    <img id="begin" style="display:none;" src="Content/images/begin.png">
-    <img id="start" style="display:none;" src="Content/images/start.png">
-    <img id="stop" style="display:none;" src="Content/images/stop.png">
-    <img id="end" style="display:none;" src="Content/images/end.png">
+
+    <img id="begin_left" style="display:none;" src="Content/images/begin_left.png">
+    <img id="start_left" style="display:none;" src="Content/images/start_left.png">
+    <img id="stop_left" style="display:none;" src="Content/images/stop_left.png">
+    <img id="end_left" style="display:none;" src="Content/images/end_left.png">
+
+    <img id="begin_right" style="display:none;" src="Content/images/begin_right.png">
+    <img id="start_right" style="display:none;" src="Content/images/start_right.png">
+    <img id="stop_right" style="display:none;" src="Content/images/stop_right.png">
+    <img id="end_right" style="display:none;" src="Content/images/end_right.png">
 </div>
