usando classe de algoritmo

--- a/app/views/sobre.html
+++ b/app/views/sobre.html
@@ -19,7 +19,7 @@
                 <li>JavaScript</li>
                 <li>Bootstrap</li>
                 <li>Durandal</li>
-                <li>Movejs</li>
+                <li>Paperjs</li>
             </ul>
         </div>
         <div class="col-lg-4">
