--- a/Content/style.css
+++ b/Content/style.css
@@ -8,5 +8,5 @@
     -webkit-border-radius: 10px 10px 10px 10px;
     border: 0px solid #000000;
 
-    background: url('/Content/images/background.png')
+    background: url('images/background.png')
 }
