--- a/app/views/sobre.html
+++ b/app/views/sobre.html
@@ -14,12 +14,12 @@
         <div class="col-lg-4">
             <h2>Tecnologias</h2>
             <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>Bootstrap</li>
-                <li>Durandal</li>
-                <li>Paperjs</li>
+                <li><a href="http://dev.w3.org/html5/html-author/" target="_blank">HTML5</a></li>
+                <li><a href="http://www.w3.org/Style/CSS/" target="_blank">CSS</a></li>
+                <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">JavaScript</a></li>
+                <li><a href="http://getbootstrap.com" target="_blank">Bootstrap</a></li>
+                <li><a href="http://durandaljs.com" target="_blank">Durandal</a></li>
+                <li><a href="http://paperjs.org" target="_blank">Paperjs</a></li>
             </ul>
         </div>
         <div class="col-lg-4">
