--- a/app/views/config.html
+++ b/app/views/config.html
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="col-lg-3">
-            <h3>Carregamento</h3>
+            <h3>Política de Busca</h3>
             <select class="form-control input-sm" data-bind="selectedOptions: politicaBusca" onchange="$('#politicaBuscaFrames').css('display', this.value == 1 ? 'block' : 'none')">
                 <option value="">Selecionar...</option>
                 <option value="1">Antecipada e Por Demanda</option>
@@ -44,7 +44,7 @@
             </div>
         </div>
         <div class="col-lg-3">
-            <h3>Substituição</h3>
+            <h3>Escopo Substituição</h3>
             <select class="form-control input-sm" data-bind="selectedOptions: escopoSubstituicao">
                 <option value="">Selecionar...</option>
                 <option value="1">Global</option>
